# Restaurant-POS

./: README.md  pyproject.toml
restaurant_pos/: hooks.py  modules.txt
